Correction du z-index sur la navbar

--- a/style/base/_base.scss
+++ b/style/base/_base.scss
@@ -3,7 +3,7 @@
    -webkit-font-smoothing: antialiased;
 }
 header {
-   z-index: 99999;
+   z-index: 9999999999;
 }
 
 body {
