--- a/style/components/_navigation.scss
+++ b/style/components/_navigation.scss
@@ -21,7 +21,6 @@
 
 /* Barre de navigation (sans le block d'information) */
 header {
-   z-index: 99999999;
    margin-top: 22px;
    transition: transform 0.32s ease-in-out;
 
