--- a/style/main.css
+++ b/style/main.css
@@ -153,7 +153,6 @@ footer hr {
 
 /* Barre de navigation (sans le block d'information) */
 header {
-  z-index: 99999999;
   margin-top: 22px;
   transition: transform 0.32s ease-in-out;
 }
@@ -557,7 +556,7 @@ header .panier:after {
 }
 
 header {
-  z-index: 99999;
+  z-index: 9999999999;
 }
 
 body {
